@@ -123,6 +123,7 @@ FWObjectDatabase::FWObjectDatabase() : FWObject(false), data_file(), obj_index()
     index_hits = index_misses = 0;
     init_id_dict();
     predictable_id_tracker = 0;
+    ignore_read_only = false;
 
     searchId =0;
     lastModified = 0;
@@ -142,6 +143,7 @@ FWObjectDatabase::FWObjectDatabase(FWObjectDatabase& d) :
     index_hits = index_misses = 0;
     init_id_dict();
     predictable_id_tracker = 0;
+    ignore_read_only = false;
 
     data_file = d.data_file;
 
