@@ -251,7 +251,8 @@ protected:
         std::map<int, FWObject*> obj_index;
         int searchId;
         int predictable_id_tracker;
-
+        bool ignore_read_only;
+        
         void init_create_methods_table();
         void init_id_dict();
 
@@ -332,6 +333,13 @@ public:
          */
         void getIndexStats(int &index_size, int &hit_counter, int &miss_counter);
 
+        /**
+         * Some operations, such as object tree merging, should ignore
+         * read-only flag on individual objects.
+         */
+        bool getIgnoreReadOnlyFlag() { return ignore_read_only; }
+        void setIgnoreReadOnlyFlag(bool f) { ignore_read_only = f; }
+
         // --- XML import/export ---
     
         virtual void fromXML(xmlNodePtr xml_parent_node) throw(FWException);
@@ -380,7 +388,15 @@ public:
         void findObjectsInGroup(
             libfwbuilder::Group *g,
             std::set<libfwbuilder::FWObject *> &resset);
-    
+
+        /**
+         * We ignore read-only flag on individual objects when whole object
+         * tree is duplicated
+         */
+        virtual FWObject& duplicate(const FWObject *obj,
+                                    bool preserve_id = true) throw(FWException);
+
+        
         void recursivelyRemoveObjFromTree(FWObject* obj, bool remove_ref=false);
 
         /**
@@ -400,7 +416,6 @@ public:
          * This means returned object can be a parent for the copy of <source>.
          */
         FWObject* reproduceRelativePath(FWObject *lib, const FWObject *source);
-
     
         /**
          * fix references in children of obj according to the map_ids which
