@@ -479,10 +479,12 @@ void FWObjectDatabase::merge( FWObjectDatabase *ndb,
                               ConflictResolutionPredicate *crp)
 {
     busy = true;
+    setIgnoreReadOnlyFlag(true);
 
     FWObjectTreeScanner scanner(this, crp);
     scanner.merge(NULL, ndb);
 
+    setIgnoreReadOnlyFlag(false);
     busy = false;
 }
 
@@ -699,5 +701,13 @@ FWObject* FWObjectDatabase::reproduceRelativePath(FWObject *lib,
         target = nobj;
     }
     return target;
+}
+
+FWObject& FWObjectDatabase::duplicate(const FWObject *obj,
+                                      bool preserve_id) throw(FWException)
+{
+    setIgnoreReadOnlyFlag(true);
+    FWObject::duplicate(obj, preserve_id);
+    setIgnoreReadOnlyFlag(false);
 }
 
